Implemented ActiveTerrain and linked app to GUI